--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.2)
 
 project(LOGICON)
 
+set(CMAKE_CXX_STANDARD 11)
+
 set(EXECUTABLE_NAME logicon)
 add_executable(${EXECUTABLE_NAME} "")
 
