--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,12 @@ project(LOGICON)
 set(CMAKE_CXX_STANDARD 11)
 
 set(EXECUTABLE_NAME logicon)
-add_executable(${EXECUTABLE_NAME} "")
 
-include(dependencies/CMakeLists.txt)
+add_executable(${EXECUTABLE_NAME} "") # empty "" required for command
 
-include(src/CMakeLists.txt)
+include(dependencies/CMakeLists.txt) # additional libraries: glew, imgui etc.
+
+include(include/CMakeLists.txt) # headers in include/ directory
+
+include(src/CMakeLists.txt) # sources
+
