Modify src/CMakeLists.txt to not compile dummy class files.
Some of the classes aren't yet implemented and it's impossible
to compile the project with them. This commit temporarily removes
them from the build process.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,19 +5,19 @@ target_sources(${EXECUTABLE_NAME}
     PUBLIC
         ${SRC_DIR}/main.cpp
 
-        ${SRC_DIR}/data.cpp
+        # ${SRC_DIR}/data.cpp
         ${SRC_DIR}/app.cpp
-        ${SRC_DIR}/engine.cpp
+        # ${SRC_DIR}/engine.cpp
         ${SRC_DIR}/fileController.cpp
-        ${SRC_DIR}/circuit.cpp
+        # ${SRC_DIR}/circuit.cpp
         ${SRC_DIR}/graphics.cpp
 
-        ${SRC_DIR}/gates/gate.cpp
-        ${SRC_DIR}/gates/clock.cpp
-        ${SRC_DIR}/gates/switch.cpp
-        ${SRC_DIR}/gates/input.cpp
-        ${SRC_DIR}/gates/and.cpp
-        ${SRC_DIR}/gates/delay.cpp
+        # ${SRC_DIR}/gates/gate.cpp
+        # ${SRC_DIR}/gates/clock.cpp
+        # ${SRC_DIR}/gates/switch.cpp
+        # ${SRC_DIR}/gates/input.cpp
+        # ${SRC_DIR}/gates/and.cpp
+        # ${SRC_DIR}/gates/delay.cpp
 
         ${SRC_DIR}/widgets/menu_widget.cpp
         ${SRC_DIR}/widgets/blocks_widget.cpp
