Add logger to project
Logger allows to register events

Closes #22

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(${EXECUTABLE_NAME}
         ${SRC_DIR}/fileController.cpp
         ${SRC_DIR}/circuit.cpp
         ${SRC_DIR}/graphics.cpp
+        ${SRC_DIR}/logger.cpp
 
         ${SRC_DIR}/gates/gate.cpp
         ${SRC_DIR}/gates/clock.cpp
