Add logging to Circuit. Fix Gate reset() and clear(). Upgrade Logger.
Put functions that can produce exceptions into try{}catch clauses, every exception is logged on WARN level.
Gate::reset() and clear() were operating on copies instead of originals of ports.
Logger put into Logicon namespace
Logger prints multiline messages with proper tabulation.
Exceptions separated into .h and .cpp (but still doesn't fix win problem...)
Exceptions have prettier format :3

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,4 +19,8 @@ target_sources(${EXECUTABLE_NAME}
         ${SRC_DIR}/gates/input.cpp
         ${SRC_DIR}/gates/and.cpp
         ${SRC_DIR}/gates/delay.cpp
+
+        ${SRC_DIR}/exceptions/logiconException.cpp
+        ${SRC_DIR}/exceptions/idNotFoundException.cpp
+        ${SRC_DIR}/exceptions/wrongPortException.cpp
 )
