Add in-house UIVec2, UIVec4 and UIRect types mimicking ImGui's types
Introduces three new types UIVec2, UIVec4 and UIRect, that all inspired
by analogous types from ImGui, to extend them for project's use cases.

All usages of Im* types were replaced by UI*.

Renamed widgets/widget_commons.h to widgets/gHelpers.h.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,8 @@ target_sources(${EXECUTABLE_NAME}
         ${SRC_DIR}/widgets/blocks_widget.cpp
         ${SRC_DIR}/widgets/footer_widget.cpp
 
+        ${SRC_DIR}/widgets/gHelpers.cpp
+
         ${SRC_DIR}/exceptions/logiconException.cpp
         ${SRC_DIR}/exceptions/idNotFoundException.cpp
         ${SRC_DIR}/exceptions/wrongPortException.cpp
