--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ target_sources(${EXECUTABLE_NAME}
 
         ${SRC_DIR}/gui/menu_widget.cpp
         ${SRC_DIR}/gui/blocks_widget.cpp
+        ${SRC_DIR}/gui/canvas_widget.cpp
         ${SRC_DIR}/gui/footer_widget.cpp
 
         ${SRC_DIR}/gui/gHelpers.cpp
