Add AssetLoader, fix include in graphics
Closes #26
fix include from GL/gl.h to GL/gl3w.h in graphics.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ target_sources(${EXECUTABLE_NAME}
         ${SRC_DIR}/circuit.cpp
         ${SRC_DIR}/graphics.cpp
         ${SRC_DIR}/logger.cpp
+        ${SRC_DIR}/assetLoader.cpp
+
 
         ${SRC_DIR}/gates/gate.cpp
         ${SRC_DIR}/gates/clock.cpp
