--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.2)
 project(LOGICON)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -rdynamic")
 
 set(EXECUTABLE_NAME logicon)
 
@@ -14,3 +15,6 @@ include(include/CMakeLists.txt) # headers in include/ directory
 
 include(src/CMakeLists.txt) # sources
 
+# Copy assets to build directory
+set(ASSETS_DIR ${CMAKE_SOURCE_DIR}/assets)
+file(COPY ${ASSETS_DIR} DESTINATION ${CMAKE_BINARY_DIR})
