Add redistributable building functionality
App can now be build as redistributable package and (hopefully)
easily shared with other people.

Just build using CMake, go to build folder and call `make install`.
In project's root, folder "dist" will be created with subdirectory for
your OS. Inside, you will find redistributable version of Logicon.

Option for GLFW was added to not install it into redistributable version
(since we use it as a static library).

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})
 ##### GL3W #####
 set(GL3W_DIR ${DEPS_DIR}/gl3w)
 
-add_subdirectory(${GL3W_DIR})
+#add_subdirectory(${GL3W_DIR})
 include_directories(${GL3W_DIR}/include)
 target_sources(${EXECUTABLE_NAME}
     PUBLIC
@@ -23,6 +23,7 @@ set(GLFW_DIR ${DEPS_DIR}/glfw)
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(${GLFW_DIR})
 target_link_libraries(${EXECUTABLE_NAME} glfw)
