Massive update for GUI classes. See description.
rename gHelpers.h to gUtils and remove .cpp implementation
put types from gHelpers in namespace Logicon::UI
add pointers to App in widgets.
use forward declarations instead of interface types
fix naming to fit style guide
integrate graphics (icons, gates)
change logging method from std::err to Logger::err
remove nextId from App class
fix circular references with shared and weak pointers
fix CMake problem on windows (-rdynamic unknown)
add missing documentation to G- classes
GBlock:
 * fix coordinate system to grid (representing grid squares)
 * constructor from gate and position
 * add prototype GPorts
 * add pointer to gate to operate on original
 * add renderWire() prototype
GCircuit:
 * add prototype circuit integration
 * change container type to list
 * change constructor to accept circuit
 * change method do add gates do circuit
GPort:
 * add prototype
 * add function to get AABB of GPort

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,8 +37,7 @@ target_sources(${EXECUTABLE_NAME}
 
         ${SRC_DIR}/gui/gCircuit.cpp
         ${SRC_DIR}/gui/gBlock.cpp
-
-        ${SRC_DIR}/gui/gHelpers.cpp
+        ${SRC_DIR}/gui/gPort.cpp
 
         ${SRC_DIR}/exceptions/logiconException.cpp
         ${SRC_DIR}/exceptions/idNotFoundException.cpp
