Switch to Flix01/imgui that has file picker addon
An attempt to switch to Flix01/imgui was done on #19 but where were
issues with building it on Windows. This commit is result of this
investigation.

Issue was caused by not including windows.h before other windows
libraries such as windef.h by addons from Flix01/imgui.
I don't know if it's our build config's issue or with Flix01/imgui
but I applied the fastest (though not the most elegant) solution.

NOTE: When updating ImGui, manual fix needs to be performed:
In imgui/addons/imguifilesystem.h, before including windef.h,
windows.h should be included.

Closes #51. Fixes #19.

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -31,6 +31,13 @@ target_link_libraries(${EXECUTABLE_NAME} glfw)
 ##### ImGUI #####
 set(IMGUI_DIR ${DEPS_DIR}/imgui)
 
+target_compile_definitions(${EXECUTABLE_NAME} PUBLIC
+        IMGUI_INCLUDE_IMGUI_USER_H
+        IMGUI_INCLUDE_IMGUI_USER_INL
+        NO_IMGUI_ADDONS
+        YES_IMGUIFILESYSTEM
+)
+
 target_include_directories(${EXECUTABLE_NAME} PUBLIC ${IMGUI_DIR})
 target_sources(${EXECUTABLE_NAME}
     PUBLIC
